GPS junta datos pero sin SNR, probar en otros dispositivos

--- a/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
@@ -22,7 +22,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginBottom="?attr/actionBarSize">
 
@@ -38,7 +38,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <ProgressBar
                     android:id="@+id/progress_bar"
@@ -236,7 +236,7 @@
                     app:cardElevation="4dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/bluetooth_le_samples_container"
-                    app:layout_constraintEnd_toEndOf="@id/bluetooth_le_samples_container" >
+                    app:layout_constraintEnd_toStartOf="@id/gps_samples_container" >
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_height="match_parent"
                         android:layout_width="match_parent">
@@ -273,9 +273,11 @@
                     android:layout_margin="@dimen/big_padding"
                     app:cardCornerRadius="4dp"
                     app:cardElevation="4dp"
-                    app:layout_constraintStart_toEndOf="@id/bluetooth_le_samples_container"
+                    app:layout_constraintStart_toEndOf="@id/cell_samples_container"
                     app:layout_constraintTop_toBottomOf="@id/sensors_samples_container"
-                    app:layout_constraintEnd_toEndOf="parent">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="@dimen/big_padding">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_height="match_parent"
@@ -287,7 +289,7 @@
                             android:layout_height="wrap_content"
                             android:textAlignment="center"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toTopOf="@id/sensors_label"
+                            app:layout_constraintBottom_toTopOf="@id/gps_label"
                             android:layout_marginStart="@dimen/small_padding"
                             android:layout_marginEnd="@dimen/small_padding"
                             style="@style/TextAppearance.MaterialComponents.Headline4"/>
@@ -306,49 +308,6 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </com.google.android.material.card.MaterialCardView>
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/sensors_samples_container"
-                    android:layout_width="0dp"
-                    android:layout_height="160dp"
-                    android:layout_margin="@dimen/big_padding"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="4dp"
-                    app:layout_constraintStart_toEndOf="@id/bluetooth_le_samples_container"
-                    app:layout_constraintTop_toBottomOf="@id/bluetooth_samples_container"
-                    app:layout_constraintEnd_toEndOf="parent">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_height="match_parent"
-                        android:layout_width="match_parent">
-
-                        <TextView
-                            android:id="@+id/sensors_count"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="center"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toTopOf="@id/sensors_label"
-                            android:layout_marginStart="@dimen/small_padding"
-                            android:layout_marginEnd="@dimen/small_padding"
-                            style="@style/TextAppearance.MaterialComponents.Headline4"/>
-
-                        <TextView
-                            android:id="@+id/sensors_label"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/sensors"
-                            android:textAlignment="center"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            android:layout_marginBottom="@dimen/big_padding"
-                            android:layout_marginStart="@dimen/big_padding"
-                            android:layout_marginEnd="@dimen/big_padding"
-                            style="@style/TextAppearance.MaterialComponents.Headline5"/>
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                </com.google.android.material.card.MaterialCardView>
-
-
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
