--- a/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
@@ -276,7 +276,6 @@
                     app:layout_constraintStart_toEndOf="@id/cell_samples_container"
                     app:layout_constraintTop_toBottomOf="@id/sensors_samples_container"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginBottom="@dimen/big_padding">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -319,7 +318,8 @@
                     app:cardElevation="4dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cell_samples_container"
-                    app:layout_constraintEnd_toStartOf="@id/gps_samples_container" >
+                    app:layout_constraintEnd_toStartOf="@id/gps_samples_container"
+                    app:layout_constraintBottom_toBottomOf="parent">
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_height="match_parent"
                         android:layout_width="match_parent">
