--- a/DigiTriadLab/app/src/main/res/layout/activity_new_experiment.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_new_experiment.xml
@@ -785,6 +785,17 @@
                         app:layout_constraintTop_toTopOf="parent" />
                 </com.google.android.material.textfield.TextInputLayout>
 
+                <TextView
+                    android:id="@+id/activity_title"
+                    style="@style/TextAppearance.MaterialComponents.Headline5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/big_padding"
+                    android:layout_marginTop="@dimen/big_padding"
+                    android:text="@string/activity_configuration"
+                    android:textColor="@color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/battery_active_input_layout" />
 
                 <TextView
                     android:id="@+id/bluetooth_le_advertise_title"
@@ -796,7 +807,7 @@
                     android:text="@string/bluetooth_le_advertise_configuration"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/battery_active_input_layout" />
+                    app:layout_constraintTop_toBottomOf="@id/activity_title" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/bluetooth_le_advertise_active_input_layout"
@@ -993,6 +1004,16 @@
                     app:layout_constraintBottom_toBottomOf="@id/battery_title"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@id/battery_title" />
+
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/activity_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/big_padding"
+                    android:checked="true"
+                    app:layout_constraintBottom_toBottomOf="@id/activity_title"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/activity_title" />
 
                 <androidx.appcompat.widget.SwitchCompat
                     android:id="@+id/bluetooth_le_advertise_switch"
