--- a/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
@@ -318,7 +318,7 @@
                     app:cardElevation="4dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cell_samples_container"
-                    app:layout_constraintEnd_toStartOf="@id/gps_samples_container"
+                    app:layout_constraintEnd_toStartOf="@id/activity_samples_container"
                     app:layout_constraintBottom_toBottomOf="parent">
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_height="match_parent"
@@ -340,6 +340,46 @@
                             android:layout_height="wrap_content"
                             android:textAlignment="center"
                             android:text="@string/battery"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_marginBottom="@dimen/big_padding"
+                            android:layout_marginStart="@dimen/big_padding"
+                            android:layout_marginEnd="@dimen/big_padding"
+                            style="@style/TextAppearance.MaterialComponents.Headline5" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/activity_samples_container"
+                    android:layout_width="0dp"
+                    android:layout_height="160dp"
+                    android:layout_margin="@dimen/big_padding"
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintStart_toEndOf="@id/battery_samples_container"
+                    app:layout_constraintTop_toBottomOf="@id/gps_samples_container"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent">
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent">
+                        <TextView
+                            android:id="@+id/activity_count"
+                            android:layout_width="match_parent"
+                            android:textAlignment="center"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toTopOf="@id/activity_label"
+                            android:layout_marginStart="@dimen/small_padding"
+                            android:layout_marginEnd="@dimen/small_padding"
+                            style="@style/TextAppearance.MaterialComponents.Headline4"/>
+
+                        <TextView
+                            android:id="@+id/activity_label"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="center"
+                            android:text="@string/activity"
                             app:layout_constraintBottom_toBottomOf="parent"
                             android:layout_marginBottom="@dimen/big_padding"
                             android:layout_marginStart="@dimen/big_padding"
