nuevo logo ContactAR Lab

--- a/ContactARLab/app/src/main/res/drawable/ic_logo.xml
+++ b/ContactARLab/app/src/main/res/drawable/ic_logo.xml
@@ -1,10 +1,36 @@
-<vector android:height="707dp" android:viewportHeight="706.8"
-    android:viewportWidth="737.7" android:width="737.90875dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#4caf50" android:pathData="M116.84,219.11l-116.84,67.45l0,134.92l116.84,67.45l116.84,-67.45l0,-134.92l-116.84,-67.45z"/>
-    <path android:fillColor="#ff5722" android:pathData="M495.39,0.55l-116.83,67.45l0,134.92l116.83,67.45l116.84,-67.45l0,-134.92l-116.84,-67.45z"/>
-    <path android:fillColor="#ff5722" android:pathData="M242.71,0l-116.84,67.46l0,134.91l116.84,67.46l116.83,-67.46l0,-134.91l-116.83,-67.46z"/>
-    <path android:fillColor="#4caf50" android:pathData="M359.14,638.79l-116.83,67.46l-116.84,-67.46l0,-134.91l116.84,-67.45l116.83,67.45l0,134.91z"/>
-    <path android:fillColor="#2196f3" android:pathData="M737.7,420.24l-116.84,67.45l-116.84,-67.45l0,-134.92l116.84,-67.45l116.84,67.45l0,134.92z"/>
-    <path android:fillColor="#2196f3" android:pathData="M611.83,639.34l-116.84,67.46l-116.84,-67.46l0,-134.91l116.84,-67.46l116.84,67.46l0,134.91z"/>
-    <path android:fillColor="#FF000000" android:pathData="M412.78,254.47L327.23,254.47a24.41,24.41 0,0 0,-24.35 24.35L302.88,427.53a24.41,24.41 0,0 0,24.35 24.35h85.55a24.41,24.41 0,0 0,24.35 -24.35L437.13,278.8A24.41,24.41 0,0 0,412.78 254.47ZM418.7,424.74a8.75,8.75 0,0 1,-8.72 8.72h-80a8.74,8.74 0,0 1,-8.71 -8.72L321.27,281.59a8.74,8.74 0,0 1,8.71 -8.71h15.53l5.27,7.9L387.7,280.78l5.27,-7.9h17.05a8.74,8.74 0,0 1,8.72 8.71Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="1000dp"
+    android:height="1000dp"
+    android:viewportWidth="1000"
+    android:viewportHeight="1000">
+  <path
+      android:pathData="M182.23,434.53v0.01c0,181.6 147.22,328.82 328.83,328.81c61.09,-0.02 118.59,-16.79 167.91,-46.16l-18.66,30.56c-53.09,30.83 -114.67,48.4 -180.04,48.42c-198.37,0 -359.18,-160.81 -359.18,-359.18S281.9,77.8 480.27,77.8c162.59,0.08 304.86,109.37 346.84,266.44c-40.3,-141.14 -169.27,-238.48 -316.05,-238.54c-0.01,0 -0.01,0 -0.02,0C329.44,105.71 182.22,252.93 182.23,434.53z"
+      android:fillColor="#777777"/>
+  <path
+      android:pathData="M828.79,357.35c-3.27,-1.79 -6.72,-3.29 -10.32,-4.45c-44.27,-116.31 -156.75,-198.1 -287.46,-198.15c-169.93,0 -307.69,137.75 -307.69,307.68c0,90.68 40.01,176.74 109.32,235.2c-84.94,-60.06 -135.48,-157.58 -135.56,-261.61v-0.01c0,-177.13 143.59,-320.72 320.72,-320.71h0.01C667.79,115.3 793.72,218.25 828.79,357.35z"
+      android:fillColor="#01ADEB"/>
+  <path
+      android:pathData="M478.93,808.02c61.17,-0.06 118.93,-14.96 169.82,-41.32l-25.01,40.96c-52.25,25.21 -110.84,39.34 -172.74,39.34c-0.01,0 -0.01,0 -0.02,0c-109.9,0 -209.4,-44.55 -281.42,-116.57C97.54,658.4 53,558.9 53,449c0,-219.8 178.19,-397.99 398,-397.98c107.96,0.02 211.27,43.9 286.25,121.57C668.18,105.12 575.49,67.29 478.93,67.15c-204.59,0 -370.44,165.85 -370.44,370.43C108.49,642.17 274.34,808.02 478.93,808.02z"
+      android:fillColor="#30BEF0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M498.23,513.85c-14.79,0 -27.97,-3.24 -39.57,-9.72c-11.6,-6.48 -20.64,-15.52 -27.12,-27.12c-6.48,-11.6 -9.72,-24.78 -9.72,-39.56c0,-14.78 3.24,-27.97 9.72,-39.57c6.48,-11.6 15.52,-20.64 27.12,-27.12c11.6,-6.48 24.78,-9.72 39.57,-9.72c23.87,0 43.88,9.33 60.03,27.97l35.47,-32.75c-11.37,-13.64 -25.41,-24.1 -42.12,-31.38c-16.71,-7.27 -35.42,-10.91 -56.11,-10.91c-24.56,0 -46.68,5.29 -66.34,15.86c-19.68,10.57 -35.14,25.24 -46.39,44c-11.26,18.76 -16.89,39.97 -16.89,63.62c0,23.65 5.63,44.85 16.89,63.61c11.25,18.76 26.71,33.43 46.39,44c19.66,10.58 41.66,15.86 66,15.86c20.69,0 39.45,-3.64 56.28,-10.91c16.82,-7.28 30.92,-17.85 42.29,-31.73l-35.47,-32.74C542.11,504.42 522.1,513.85 498.23,513.85z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M699,741"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M841,787"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M915.2,949H626.8c-26.94,0 -43.38,-29.9 -28.67,-52.46C665,794 676,778 709,725c0.82,-56.46 -0.37,-111.58 -0.28,-167H690.5c-5.11,0 -9.74,-2.07 -13.08,-5.42c-3.35,-3.34 -5.42,-7.97 -5.42,-13.08c0,-10.22 8.28,-18.5 18.5,-18.5h161c10.22,0 18.5,8.28 18.5,18.5c0,5.11 -2.07,9.74 -5.42,13.08c-3.34,3.35 -7.97,5.42 -13.08,5.42h-18.22c0.09,55.42 -1.1,110.54 -0.28,167c33,53 44,69 110.87,171.54C958.58,919.1 942.14,949 915.2,949z"/>
+  <path
+      android:pathData="M638.25,884.6C626,901.35 639.59,925 660.33,925h222.09c20.75,0 33.41,-23.02 22.08,-40.4L856,816c-14,-16 -31,7 -90,8c-14,2 -65,-27 -84.93,-8C666.8,838.87 652.52,861.73 638.25,884.6z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M764.5,484.5m-22.5,0a22.5,22.5 0,1 1,45 0a22.5,22.5 0,1 1,-45 0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M800,410m-33,0a33,33 0,1 1,66 0a33,33 0,1 1,-66 0"/>
 </vector>
